apps/services/servarr/app/arr-stack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arr-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servarr
  template:
    metadata:
      labels:
        app: servarr
        backup.velero.io/backup-volumes-excludes: "media-pvc"
        velero.io/exclude-from-backup: "true"
    spec:
      containers:
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config

        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8191

        - name: sonarr
          image: lscr.io/linuxserver/sonarr
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: irma
              mountPath: /irma

      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: irma
          hostPath:
            path: /var/mnt/irma/media
