apps/services/servarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arr-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servarr
  template:
    metadata:
      labels:
        app: servarr
        backup.velero.io/backup-volumes-excludes: "media-pvc"
        velero.io/exclude-from-backup: "true"
    spec:
      containers:
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config

        - name: lidarr
          image: ghcr.io/linuxserver/lidarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: lidarr-config
              mountPath: /config

        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8191

        - name: sonarr
          image: lscr.io/linuxserver/sonarr
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: irma
              mountPath: /irma

        - name: radarr
          image: lscr.io/linuxserver/radarr
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: irma
              mountPath: /irma

        - name: bazarr
          image: lscr.io/linuxserver/bazarr
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: irma
              mountPath: /irma

      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: irma
          hostPath:
            path: /var/mnt/irma/media
