apps/services/servarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: LoadBalancer
  ports:
    - name: "9696"
      port: 9696
      targetPort: 9696
  selector:
    app: servarr
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: LoadBalancer
  ports:
    - name: "8989"
      port: 8989
      targetPort: 8989
  selector:
    app: servarr
---
apiVersion: v1
kind: Service
metadata:
  name: byparr
spec:
  type: ClusterIP
  ports:
    - name: "8191"
      port: 8191
      targetPort: 8191
  selector:
    app: servarr
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  type: LoadBalancer
  ports:
    - name: "8686"
      port: 8686
      targetPort: 8686
  selector:
    app: servarr
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: LoadBalancer
  ports:
    - name: "7878"
      port: 7878
      targetPort: 7878
  selector:
    app: servarr
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  type: LoadBalancer
  ports:
    - name: "6767"
      port: 6767
      targetPort: 6767
  selector:
    app: servarr
