apps/services/servarr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    gethomepage.dev/description: Find Torrents
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Torrents
    gethomepage.dev/icon: prowlarr.png
    gethomepage.dev/name: Prowlarr
    cert-manager.io/cluster-issuer: homelab-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "prowlarr"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: prowlarr.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
  tls:
    - hosts:
        - prowlarr.internal
      secretName: homelab-tls-prowlarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    gethomepage.dev/description: Find Torrents Automatically
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Torrents
    gethomepage.dev/icon: sonarr.png
    gethomepage.dev/name: Sonarr
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: sonarr.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
  tls:
    - hosts:
        - sonarr.internal
      secretName: homelab-tls-sonarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  annotations:
    gethomepage.dev/description: Find Music Automatically
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Torrents
    gethomepage.dev/icon: lidarr.png
    gethomepage.dev/name: Lidarr
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: lidarr.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
  tls:
    - hosts:
        - lidarr.internal
      secretName: homelab-tls-lidarr
